<resources>
    <string name="app_name">fuel cal</string>
    <string name="action_settings">Settings</string>
    <string name="fuel_price">Fuel Price</string>
    <string name="distance">Distance</string>
    <string name="fuel_consumption">Fuel Consumption</string>
    <string name="trip_cost">Trip Cost</string>
    <string name="pound">&#xa3;</string>
    <string name="mpg">mpg</string>
    <string name="miles">miles</string>
    <string name="calculate">Calculate</string>
    <string name="litre">/Litre</string>
    <string-array name="price_unit_spinner">
        <item>p/Litre</item>
        <item>£/Litre</item>
    </string-array>
    <string-array name="distance_unit_spinner">
        <item>Miles</item>
        <item>Kilometer</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="fuel_calculator_tab">Calculator</string>
    <string name="fuel_price_tab">Price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>