<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"

        android:paddingRight="16dp">


        <TextView
            android:id="@+id/fuel_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel_price" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pound" />


            <EditText
                android:id="@+id/fuel_price_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/litre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/litre" />

        </LinearLayout>


        <TextView
            android:id="@+id/fuel_consumption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel_consumption" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/fuel_consumption_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/mpg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mpg" />

        </LinearLayout>


        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/distance_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/miles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miles" />

        </LinearLayout>
        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:onClick="CalTripCost" />


        <TextView
            android:id="@+id/trip_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_cost" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pound2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pound" />

            <EditText
                android:id="@+id/trip_cost_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />


        </LinearLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>